# github-stats-rs

./: .editorconfig  CHANGELOG.md  Cargo.toml  README.md
.github/: stale.yml
examples/: get_repo.rs  repo.rs  search.rs  user.rs
src/: issues.rs  languages.rs  lib.rs  repository.rs  search.rs  user.rs
src/repository/: issues.rs  languages.rs  releases.rs
src/search/: query.rs
