[package]
name = "github-stats"
version = "0.1.0"
authors = ["Spenser Black <spenserblack01@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Gets stats from Github"
readme = "README.md"
keywords = ["github"]
repository = "https://github.com/spenserblack/github-stats-rs"
exclude = [
    "CHANGELOG.md",
    ".github/*",
    ".editorconfig",
]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[badges]
is-it-maintained-issue-resolution = { repository = "spenserblack/github-stats-rs" }
is-it-maintained-open-issues = { repository = "spenserblack/github-stats-rs" }
maintenance = { status = "actively-developed" }
