[package]
name = "github-stats"
version = "0.2.0"
authors = ["Spenser Black <spenserblack01@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Use Github's API"
readme = "README.md"
keywords = ["github"]
repository = "https://github.com/spenserblack/github-stats-rs"
exclude = [
    "CHANGELOG.md",
    ".github/*",
    ".editorconfig",
]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[badges]
travis-ci = { repository = "spenserblack/github-stats-rs" }
is-it-maintained-issue-resolution = { repository = "spenserblack/github-stats-rs" }
is-it-maintained-open-issues = { repository = "spenserblack/github-stats-rs" }
maintenance = { status = "actively-developed" }
