[package]
name = "github-stats"
version = "0.4.0"
authors = ["Spenser Black <spenserblack01@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Use Github's API"
readme = "README.md"
keywords = ["github"]
repository = "https://github.com/spenserblack/github-stats-rs"
exclude = [
    "CHANGELOG.md",
    ".github/*",
    ".gitignore",
    ".editorconfig",
    ".travis.yml",
]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
clap = "2"
tokio = { version = "0.2", features = ["macros"] }
